<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:onClick="onAddImageClick"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/add_image_bnw" />

            <TextView
                android:id="@+id/addTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_border_color"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/addDescTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addDescEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_border_color"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="3"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/addDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/addCalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border" />

            <TextView
                android:id="@+id/addPickUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pick_up_times"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addPickUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_border_color"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:onClick="onPickUpClick"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/addQuantityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addQuantityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_border_color"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/one" />

            <TextView
                android:id="@+id/addLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_border_color"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addSaveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_border_color"
                android:onClick="onSaveClick"
                android:text="@string/save"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>